# brainbuilding

./: .gitignore  .gitmodules  MANIFEST.in  README.md  config.py  knn_eval.py  main.py  prepare_fif_what_module_sees.py  preprocessing.py  pyneurostim  pyproject.toml  raw_preprocessing.py  requirements.txt  stateful_filter_test.py  testing_umap.py  training.py  training_all_classes.py  training_knn.py
.cursor/rules/: no-getattr-and-strict-typing.mdc  project-organization-and-declarative-config.mdc  python-exception-handling.mdc  scientific-scripts.mdc  strict-typing-and-declarative-config.mdc  uv-and-shell.mdc
brainbuilding/configs/: README.md
brainbuilding/core/: config.py  transformers.py  utils.py
brainbuilding/service/: cli.py  eeg_service.py  pipeline.py  signal.py  state_config.py  state_types.py  tcp_sender.py
brainbuilding/train/: evaluation.py  pipelines.py
configs/: pipeline_config.yaml  state_config.yaml  state_config_old.yaml
configs/pipeline/: pipeline_config.yaml
configs/states/: state_config.yaml  state_config_new.yaml  state_config_new_inference_all.yaml  state_config_new_simple.yaml  state_config_old.yaml  state_config_old_train.yaml
docs/: realtime-eeg-service.md
models/: classifier.joblib  csp.joblib  csp.json  pt.joblib
scripts/3rd-order-central-moment-tensors/: classify.py  main.py
scripts/channel-contribution-analysis/: channel_contribution_analysis.py  individual_csp_images.py  merge_plots.py
scripts/compute-samples-distances/: readme.md  within_subject_distances.py  within_subject_distances_lagged.py
scripts/covariance-matrices-parallel-transport/: csp_svc_cross_validation_eval.py  knn_matrices_subject_cross_validation_eval.py  knn_subject_cross_validation_eval copy.py  knn_subject_cross_validation_eval.py  parallel_transport_dataset_generation.py  random_forest_cross_validation_eval.py  sequential_subject_elimination.py  umap_projection_of_tangent_vectors.py
scripts/distance-comparison/: distance_comparison.py
scripts/distance-index-correlation/: distance_index_correlation.py
scripts/evaluation/: pipelines_eval.py  pipelines_eval_2.py
scripts/fif-vizualization/: readme.md  show_eeg_data_raw.py
scripts/fused-mds-projections/: fused_mds_projections.py
scripts/hybrid-pipeline-evaluation/: hybrid_pipeline_evaluation.py
scripts/mocks/: mock_lsl_endpoint.py  tcp_server.py
scripts/persistence-diagrams/: persistence_diagram_comparison.py
scripts/preprocessing/: compare_preprocessing_evaluation.py  online_preprocessing.py  online_preprocessing_dataset.py  preprocessing.py  preprocessing_multi_band.py  raw_preprocessing.py  readme.md
scripts/sequential-subject-elimination/: sequential_subject_elimination.py  subject_augmented_knn_eval.py  subject_knn_eval.py  subject_knn_eval_persistence.py  top_subjects_model_eval.py  top_subjects_tuned_model_eval copy.py  top_subjects_tuned_model_with_trial_heuristic_eval.py
scripts/sequential-subject-selection/: readme.md
scripts/subject-mds-projections/: subject_mds_projections.py
scripts/temporal-mds-projections/: temporal_mds_projections.py
scripts/umap-viz/: viz.py
scripts/vas-correlation/: vas_correlation.py
scripts/vas-csp-difference-regression/: vas_csp_difference_regression.py
scripts/vas-csp-distance-correlation/: vas_csp_distance_correlation.py
(+39 files in other folders)
