[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "brainbuilding"
version = "0.1.0"
description = "A package for brain building and analysis"
authors = [
    {name = "Nikita Smirnov", email = "neket2000@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",
    "mne>=1.8.0",
    "pyriemann>=0.7",
    "matplotlib>=3.9.2",
    "tqdm>=4.66.0",
    "h5py>=3.10.0",
    "seaborn>=0.13.0",
    "pyaml>=24.9.0",
    "pyneurostim @ git+https://github.com/VladimirR46/pyneurostim.git@b022759f96466304ad600c0f48fb5397bd6fcd17",
    "pylsl==1.16.2",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["brainbuilding"] 

[project.scripts]
brainbuilding-realtime = "brainbuilding.service.cli:main"

[tool.ruff]
line-length = 80

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true